--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,12 @@
 buildscript {
     
     repositories {
-        maven { url 'https://dl.google.com/dl/android/maven2' }
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta4'
-        classpath 'com.novoda:bintray-release:0.5.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,8 +17,9 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url 'https://dl.google.com/dl/android/maven2' }
         jcenter()
+        maven { url "https://jitpack.io" }
+        google()
     }
 }
 
